--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <script type="systemjs-importmap" src="package.json"></script>
-    <script src="https://unpkg.com/systemjs@^6.3.3/dist/system.js"></script>
-    <script src="https://unpkg.com/systemjs@^6.3.3/dist/extras/amd.js"></script>
-    <script src="https://unpkg.com/systemjs@^6.3.3/dist/extras/named-exports.js"></script>
-    <script src="https://unpkg.com/systemjs@^6.3.3/dist/extras/transform.js"></script>
-    <script src="https://unpkg.com/typescript@^3.9.5/lib/typescript.js"></script>
+    <script src="https://unpkg.com/systemjs@6.3.3/dist/system.js"></script>
+    <script src="https://unpkg.com/systemjs@6.3.3/dist/extras/amd.js"></script>
+    <script src="https://unpkg.com/systemjs@6.3.3/dist/extras/named-exports.js"></script>
+    <script src="https://unpkg.com/systemjs@6.3.3/dist/extras/transform.js"></script>
+    <script src="https://unpkg.com/typescript@3.9.5/lib/typescript.js"></script>
     <script src="src/systemjs-typescript.js"></script>
   </head>
   <body>
