reorganize, remove old code

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="node_modules/systemjs/dist/system.js"></script>
-    <script src="node_modules/typescript/lib/typescript.js"></script>
-    <script src="src/systemjs-typescript.js"></script>
+    <script src="./node_modules/systemjs/dist/system.js"></script>
+    <script src="./node_modules/typescript/lib/typescript.js"></script>
+    <script src="./src/systemjs-typescript.js"></script>
   </head>
   <body>
-    <script type="systemjs-importmap" src="package.json"></script>
-    <script type="systemjs-module" src="src/index.ts"></script>
+    <script type="systemjs-importmap" src="./package.json"></script>
+    <script type="systemjs-module" src="./src/index.ts"></script>
   </body>
 </html>
