simpler gui code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <script src="./node_modules/systemjs/dist/system.js"></script>
     <script src="./node_modules/typescript/lib/typescript.js"></script>
     <script src="./src/systemjs-typescript.js"></script>
+    <style>
+      html {
+        background-color: darkslategrey;
+      }
+    </style>
   </head>
   <body>
     <script type="systemjs-importmap" src="./package.json"></script>
