use vite, fp-ts, pure gl-matrix

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <script src="./node_modules/systemjs/dist/system.js"></script>
-    <script src="./node_modules/typescript/lib/typescript.js"></script>
-    <script src="./src/systemjs-typescript.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>shaders</title>
     <style>
       html {
         background-color: darkslategrey;
@@ -11,7 +11,6 @@
     </style>
   </head>
   <body>
-    <script type="systemjs-importmap" src="./package.json"></script>
-    <script type="systemjs-module" src="./src/index.ts"></script>
+    <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
