better background color

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>shaders</title>
     <style>
       html {
-        background-color: darkslategrey;
+        background-color: #1a1a1a;
       }
     </style>
   </head>
