--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>shaders</title>
     <style>
       html {
-        background-color: darkslategrey;
+        background-color: #1a1a1a;
       }
     </style>
-  <script type="module" crossorigin src="/shaders/assets/index.6a153c77.js"></script>
-  <link rel="modulepreload" href="/shaders/assets/vendor.efb7b843.js">
+  <script type="module" crossorigin src="/shaders/assets/index.e81e4faa.js"></script>
+  <link rel="modulepreload" href="/shaders/assets/vendor.89899b44.js">
 </head>
   <body>
     
