--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
       html {
         background-color: #1a1a1a;
       }
+      html,
+      body,
+      * {
+        user-select: none;
+        touch-action: none;
+        -webkit-user-select: none;
+        -webkit-touch-callout: none;
+        -webkit-user-drag: none;
+      }
     </style>
   </head>
   <body>
