--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
       html {
         background-color: #1a1a1a;
       }
+      html,
+      body,
+      * {
+        user-select: none;
+        touch-action: none;
+        -webkit-user-select: none;
+        -webkit-touch-callout: none;
+        -webkit-user-drag: none;
+      }
     </style>
-  <script type="module" crossorigin src="/shaders/assets/index.385bf3fe.js"></script>
+  <script type="module" crossorigin src="/shaders/assets/index.efe860a5.js"></script>
   <link rel="modulepreload" href="/shaders/assets/vendor.89899b44.js">
 </head>
   <body>
